Small content updates

--- a/src/decision.html
+++ b/src/decision.html
@@ -12,7 +12,7 @@
     <header>
         <include src="templates/header.html">
             <h2>Manage Decisions in a intuitive way</h2>
-            <h1>Decision Engine</h1>
+            <h1>Gandalf Decision Engine</h1>
         </include>
     </header>
 
