--- a/src/decision.html
+++ b/src/decision.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Gandalf - Open-Source Decision Engine for Big-Data</title>
+    <include src="templates/head.html">
+        <title>Gandalf - Open-Source Decision Engine for Big-Data</title>
 
-    <meta name="description" content="Take control over your risks with decision and scoring engine for big-data applications. Integrates in just few hours. Free version available.">
-    <meta name="keywords" content="decision engine, scoring, tables, big-data, decision making, risk management, business rules engine, open-source, split testing, anti fraud">
+        <meta name="description" content="Take control over your risks with decision and scoring engine for big-data applications. Integrates in just few hours. Free version available.">
+        <meta name="keywords" content="decision engine, scoring, tables, big-data, decision making, risk management, business rules engine, open-source, split testing, anti fraud">
 
-    <include src="templates/head.html"></include>
+    </include>
 </head>
 <body class="decision-page">
     <header>
@@ -96,7 +97,6 @@
         <include src="templates/footer.html"></include>
     </footer>
 
-    <script defer src="scripts/highlight.pack.js" type="text/javascript"></script>
-    <script defer src="scripts/main.js" type="text/javascript"></script>
+    <include src="templates/scripts.html"></include>
 </body>
 </html>
