Update file names for better seo

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
                         </li>
                     </ul>
 
-                    <a class="button large" href="decision.html">Read more</a>
+                    <a class="button large" href="decision_engine.html">Read more</a>
                 </div>
                 <div class="scoring-engine">
                     <h3>Scoring Engine <br> for</h3>
@@ -101,7 +101,7 @@
                         </li>
                     </ul>
 
-                    <a class="button large" href="scoring.html">Read more</a>
+                    <a class="button large" href="scoring_engine.html">Read more</a>
                 </div>
             </section>
         </section>
