--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                     <li>
                         <h5>Free</h5>
                         <p>
-                            All source codes is published under GPL license. You are free to migrate from SaaS to your own installation at anytime.
+                            All source codes is published under GPL license.
                             Short time and low costs of deployment, it takes only few hours to setup everything and about two days to integrate it
                         </p>
                     </li>
@@ -34,14 +34,14 @@
                         <h5>Flexible</h5>
                         <p>
                             You have freedom to design any decision rules on any data model, and to manage everything on the fly.
-                            Every changes work in online, without need to re-deploy anything.
+                            Every changes reflected online, without need to re-deploy anything.
                         </p>
                     </li>
                     <li>
                         <h5>Rich functionality</h5>
                         <p>
-                            Define Decision and Scoring tables. Add variants to run split tests. Change allocation between them.
-                            Review and analyze all decisions. Use built-in debugger. Share access with your collaborators.
+                            Define Decision and Scoring tables.
+                            Test your hypothesis with a split tests. Review and analyze all decisions. Use built-in introspection. Share access with your collaborators.
                         </p>
                     </li>
 
@@ -49,15 +49,14 @@
                         <h5>Simple to use </h5>
                         <p>
                             You have freedom to design any decision rules on any data model, and to manage everything on the fly.
-                            Every changes work in online, without need to re-deploy anything.
                         </p>
                     </li>
 
                     <li>
                         <h5>Enterprise ready</h5>
                         <p>
-                            Several PSP's use Gandalf as anti fraud, scoring their eCommerce transactions, and as decision engine to route transactions between payment gateways.
-                            Online lenders use it to manage cut-off risks and to make final decisions on customer applications. Join them and submit us a new use-case!
+                            Several PSP's use Gandalf as anti-fraud, scoring their eCommerce transactions and as decision engine to route transactions between payment gateways.
+                            Online lenders use it to manage cut-off risks and to make final decisions on customer applications. <a href="https://apps.gndf.io/#/sign-up" title="Try Gandalf">Join them</a> and submit us a new use-case!
                         </p>
                     </li>
                 </ul>
@@ -77,11 +76,11 @@
                             Rules for Effective Advertising
                         </li>
                         <li>
-                            Routing Rules for Payment Service Providers read more
+                            Routing Rules for Payment Service Providers
                         </li>
                     </ul>
 
-                    <a class="button large" href="decision_engine.html">Read more</a>
+                    <a class="button large" href="decision_engine.html">Lean more</a>
                 </div>
                 <div class="scoring-engine">
                     <h3>Scoring Engine <br> for</h3>
@@ -101,7 +100,7 @@
                         </li>
                     </ul>
 
-                    <a class="button large" href="scoring_engine.html">Read more</a>
+                    <a class="button large" href="scoring_engine.html">Lean more</a>
                 </div>
             </section>
         </section>
