Update code samples

--- a/src/scoring_engine.html
+++ b/src/scoring_engine.html
@@ -75,7 +75,7 @@
 
                 <div class="code-sample">
                     <pre>
-                        <code class="bash"> <include src="templates/code-sample.html"></include></code>
+                        <code class="bash"><include src="templates/code-sample-scoring.html"></include></code>
                     </pre>
                 </div>
             </div>
