--- a/src/decision_engine.html
+++ b/src/decision_engine.html
@@ -80,7 +80,7 @@
 
                 <div class="code-sample">
                     <pre>
-                        <code class="bash"> <include src="templates/code-sample.html"></include></code>
+                        <code class="bash"><include src="templates/code-sample-decision.html"></include></code>
                     </pre>
                 </div>
             </div>
