Change scoring and decision images

--- a/src/scoring_engine.html
+++ b/src/scoring_engine.html
@@ -46,7 +46,7 @@
                     </p>
                 </div>
 
-                <img class="row-image" src="images/image-1.png">
+                <img class="row-image" src="images/scoring-image-1.png">
             </div>
 
             <div class="row image-left">
@@ -60,7 +60,7 @@
                     </p>
                 </div>
 
-                <img class="row-image" src="images/image-2.png">
+                <img class="row-image" src="images/scoring-image-2.png">
             </div>
 
             <div class="row api-row">
