--- a/src/decision_engine.html
+++ b/src/decision_engine.html
@@ -51,7 +51,7 @@
                     </p>
                 </div>
 
-                <img class="row-image" src="images/image-1.png">
+                <img class="row-image" src="images/decision-image-1.png">
             </div>
 
             <div class="row image-left">
@@ -65,7 +65,7 @@
                     </p>
                 </div>
 
-                <img class="row-image" src="images/image-2.png">
+                <img class="row-image" src="images/decision-image-2.png">
             </div>
 
             <div class="row api-row">
