Friendly secondary pages URL's for SEO

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
                         </li>
                     </ul>
 
-                    <a class="button large" href="decision_engine.html">Lean more</a>
+                    <a class="button large" href="decision-engine.html">Lean more</a>
                 </div>
                 <div class="scoring-engine">
                     <h3>Scoring Engine <br> for</h3>
@@ -100,7 +100,7 @@
                         </li>
                     </ul>
 
-                    <a class="button large" href="scoring_engine.html">Lean more</a>
+                    <a class="button large" href="scoring-engine.html">Lean more</a>
                 </div>
             </section>
         </section>
