Improved content and meta description

--- a/src/decision-engine.html
+++ b/src/decision-engine.html
@@ -4,7 +4,7 @@
     <include src="templates/head.html">
         <title>Gandalf - Open-Source Decision Engine for Big-Data</title>
 
-        <meta name="description" content="Take control over your risks with decision and scoring engine for big-data applications. Integrates in just few hours. Free version available.">
+        <meta name="description" content="Make decisions on cut-off risks, payments routing, product suggestions and many more with open source engine. Integrates in just few hours. Free version available.">
         <meta name="keywords" content="decision engine, scoring, tables, big-data, decision making, risk management, business rules engine, open-source, split testing, anti fraud">
 
     </include>
