Fix spelling mistake in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
                         </li>
                     </ul>
 
-                    <a class="button large" href="decision-engine.html">Lean more</a>
+                    <a class="button large" href="decision-engine.html">Learn more</a>
                 </div>
                 <div class="scoring-engine">
                     <h3>Scoring Engine <br> for</h3>
@@ -99,7 +99,7 @@
                         </li>
                     </ul>
 
-                    <a class="button large" href="scoring-engine.html">Lean more</a>
+                    <a class="button large" href="scoring-engine.html">Learn more</a>
                 </div>
             </section>
         </section>
